# solana-raffle-contract

./: .gitignore  README.md  build.sh  check-balance.js  check-config.js  config-info.json  create-raffle-simple.js  create-raffle.js  debug-raffle.js  downgrade_build.sh  exact-pda-raffle.js  fixed-config.js  fixed-create-raffle.js  full-flow-test.js  helius-raffle.js  init-config.js  init-test.js  initialize-new-config.js  inspect-config.js  keypair-raffle-test.js  keypair-test.js  package-lock.json  package.json  pda-only.js  pda-raffle-test.js  pda-raffle.js  raffle-completion-test.html  raffle-test.js  raffle-with-retries.js  reset-config.js  retry-init-config.js  simple-raffle.js  simple-test.js  test-latest-contract.js  test-results.json  timestamp-fix.js  updated-raffle-test.js  verify-status.js  working-pda-raffle.js
program/: Cargo.toml  README.md  build-direct.sh  full_contract_test.js  init_config_for_new_program.js  new-test-raffle.json  new-test-treasury.json  package-lock.json  package.json  run_tests.sh  test-participant.json  test-payer-tickets.json  test-payer.json  test-raffle.json  test-treasury.json  test_live_contract.js  test_new_contract.js  test_vrf_completion.js  ticket_purchase_test.js  verify_program.js  vrf-test-participant-tickets.json  vrf-test-payer-tickets.json  vrf-test-raffle.json
program/src/: error.rs  instruction.rs  lib.rs  minimal.rs  processor.rs  raffle_entrypoint.rs  raffle_error.rs  raffle_instruction.rs  raffle_processor.rs  raffle_processor_keypair.rs  raffle_state.rs  state.rs  temp_fix.rs  utils.rs  vrf.rs
(+1 files in other folders)
