[package]
name = "solcino"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.14.17"
solana-sdk = "=1.14.17"
thiserror = "=1.0.40"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.1.2", features = ["no-entrypoint"] }
borsh = "=0.9.3"
# Using a simplified switchboard-v2 dependency that's compatible with rustc 1.62.0
switchboard-v2 = { version = "=0.1.15", features = ["no-entrypoint"] }
arrayref = "=0.3.7"
libc = "=0.2.139"
bumpalo = "=3.12.0"

[dev-dependencies]
solana-program-test = "1.14.17"
tokio = { version = "1.14.1", features = ["full"] }
# solana-sdk is already in [dependencies]

[lib]
crate-type = ["cdylib", "lib"]
